manifests/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    cloud.google.com/backend-config: '{"default": "grafana-backendconfig"}'
spec:
  type: ClusterIP
  selector:
    app: grafana
  ports:
  - name: http
    port: 3000
    targetPort: 3000
